fixed contrast issue with #fb4934 and #1d2021

--- a/src/renderer/themes.css
+++ b/src/renderer/themes.css
@@ -332,9 +332,9 @@ it can be safely elided. This looks quite pleasant on this theme. */
   --secondary-text-color: #fbf1c7;
   --tertiary-text-color: #ebdbb2;
   --title-color: #ebdbb2;
-  --bg-color: #1d2021;
+  --bg-color: #32302f;
   --favorite-icon-color: #fabd2f;
-  --card-bg-color: #282828;
+  --card-bg-color: #1d2021;
   --secondary-card-bg-color: #458588;
   --scrollbar-color: #ebdbb2;
   --scrollbar-color-hover: #504945;
